<resources>
    <string name="app_name_proj1">My App Portfolio</string>
    <string name="app_name_proj2">Popular Movies</string>

    <string name="landing_header">My Nanodegree Apps!</string>

    <string name="landing_btnText_spotifyStreamer">SPOTIFY STREAMER</string>
    <string name="landing_btnText_scoresApp">SCORES APP</string>
    <string name="landing_btnText_libraryApp">LIBRARY APP</string>
    <string name="landing_btnText_buildItBigger">BUILD IT BIGGER</string>
    <string name="landing_btnText_xyzReader">XYZ READER</string>
    <string name="landing_btnText_capstone">CAPSTONE: MY OWN APP</string>

    <string name="landing_button1_toast">This button will launch Spotify Streamer!</string>
    <string name="landing_button2_toast">This button will launch Scores App!</string>
    <string name="landing_button3_toast">This button will launch Library App!</string>
    <string name="landing_button4_toast">This button will launch Build it Bigger!</string>
    <string name="landing_button5_toast">This button will launch XYZ Reader!</string>
    <string name="landing_button6_toast">This button will launch My Capstone App!</string>

    <!--Error Messages-->
    <string name="no_results">Sorry,No Results Found.</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="server_error">Could not connect to server,\n Please try again later!</string>
    <string name="not_available">Not Available</string>

    <!--Action Messages-->
    <string name="tap_left_pane">Tap movie in left pane to view its details.</string>

    <!--Movie Info Part-->
    <string name="release_date">Release Date:</string>
    <string name="synopsis">Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>

    <!--Favorites-->
    <string name="movie_added">Movie added to Favorites</string>
    <string name="movie_removed">Movie removed from Favorites</string>
    <string name="error_movie_added">Error in inserting Movie to Favorites</string>
    <string name="error_movie_removed">Error in removing Movie from Favorites</string>
    <string name="no_fav_movie">No Favorite movie added.</string>
    <string name="share_using">Share Via</string>
</resources>
